# 4laboratorinis

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
app/: app.manifest  main.cpp  studentas.cpp  studentas.h  zmogus.h
grades_dll/: grades.cpp  grades.h
packaging/: VU-Kornelija-Dambrauskaite.iss
